# MobileAutomation

./: .gitignore  main.py  pyproject.toml
src/: main.py
src/helpers/: common.py
