[tool.poetry]
name = "mobileautomation"
version = "0.1.0"
description = ""
authors = ["Nivi <nivedini27@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
appium-python-client = "^2.7.1"
webdriver-manager = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
